--- a/_profiles/Preview-ML-UST_Steven_Israel.html
+++ b/_profiles/Preview-ML-UST_Steven_Israel.html
@@ -8,7 +8,7 @@ name: "Preview-ML-UST_Steven_Israel"
 #
 # The default profile will be the one shown when accessing the root URL of your
 # SpeedTracker site.
-# 
+#
 default: false
 
 #
@@ -16,7 +16,7 @@ default: false
 # with a minimum value of 12, as only two scheduled tests per day are allowed.
 # To disabled repeated tests, simply remove this property from the profile.
 #
-interval: 23
+#interval: 23
 
 #
 # WebPageTest test parameters.
